--- a/Statistics.css
+++ b/Statistics.css
@@ -29,3 +29,7 @@ table
 	font&#45&#59;weight&#58&#59;900&#59;
 	border&#45&#59;color&#58&#59;#8A2BE2&#59;
 &#125;
+h1
+&#123;
+	text&#45&#59;align&#58&#59; center&#59;
+&#125;
