--- a/History.css
+++ b/History.css
@@ -9,3 +9,7 @@ body,p
 	font&#45&#59;size&#58&#59; 30px&#59;
 	color&#58&#59; DarkBlue&#59;
 &#125;
+h1
+&#123;
+	text&#45&#59;align&#58&#59; center&#59;
+&#125;
